feat: stabilize AI runtime, licensing, and indicator architecture